--- a/aboutpage.html
+++ b/aboutpage.html
@@ -134,10 +134,10 @@
         </nav>
     </header>
 
-    <body class="bg-gradient-to-r from-lgrey via-dgrey to-slate-500 bg-[length:200%_200%] animate-gradient text-center font-comoront font-bold pr-12 pl-12">
+    <body class="bg-gradient-to-r from-lgrey via-dgrey to-slate-500 bg-[length:200%_200%] animate-gradient text-center font-comoront font-bold">
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
-        <section class="pt-12 pb-6 text-lg font-comorant animate-slowfade">
+        <section class="pt-12 pb-6 text-lg font-comorant animate-slowfade pr-12 pl-12">
             <p>
                 Hey there, my name is Ranbir Gill and I am currently a Computer Science student at the Toronto
                 Metropolitan
