--- a/projectspage.html
+++ b/projectspage.html
@@ -168,6 +168,7 @@
                 learned new features I added more functionality such as the music player ability that uses the YT-DLP
                 library. Apart from that it's
                 still a simple bot with more plans in the future.</p>
+            </button>
         </section>
         <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
@@ -188,6 +189,7 @@
                 input and data processing. I plan to add more functionality in the future, such as integrating payment
                 systems.
             </p>
+        </button>
         </section>
 
         <hr class="h-px my-8 border-0 bg-gray-800">
@@ -209,6 +211,7 @@
                 image
                 depending on local weather conditions.
             </p>
+        </button>
         </section>
         <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
@@ -225,6 +228,7 @@
                 tested for
                 hundereds of various scenarios.
             </p>
+            </button>
         </section>
         <hr class="h-px my-8 border-0 bg-gray-800">
 
