--- a/projectspage.html
+++ b/projectspage.html
@@ -139,63 +139,141 @@
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
-        <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
-            <h1 class="text-2xl font-bold underline italic">MonkeyBot</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/discord.png"
-                alt="pending">
-            <p class="text-lg text-center">MonkeyBot was a Python Discord Bot that I initially created for learning
-                purposes but
-                then decided to add it to my group server for testing purposes. At the start it had simple commands such
-                as response commands and some minigames like rock paper scisors and guess the number. As I tested and
-                learned new features I added more functionality such as the music player ability that uses the YT-DLP
-                library. Apart from that it's
-                still a simple bot with more plans in the future.</p>
-        </section>
+        <p class="pt-6 text-lg font-comorant animate-fadein text-center">Below you can find some of the projects that I have completed over the past year. The source code for each can be found on my <a class="text-indigo-700 hover:text-cyan-500" href="https://github.com/gill345">GitHub</a>. 
+        I do have more projects in progress that I will update onto this page as soon as they are finished.</p>
         <hr class="h-px my-8 border-0 bg-gray-800">
-        <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
-            <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
-            <video class="w-96 h-96 pt-6 pb-6" loop autoplay muted playsinline>
-                <source src="images/bicycles.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can sign up, view
-                bikes
-                available for rent, rent out a bike, and post their own bike up for rent.
-                To store bike and rental information I decided to utilize a MySQL database to store this data and PHP
-                for the overall
-                input and data processing. I plan to add more functionality in the future, such as integrating payment
-                systems.
-            </p>
-        </section>
+
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">MonkeyBot</h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+
+                    <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
+                        src="images/discord.png" alt="pending">
+                    <p class="text-lg text-center">MonkeyBot was a Python Discord Bot that I initially created for
+                        learning
+                        purposes but
+                        then decided to add it to my group server for testing purposes. At the start it had simple
+                        commands such
+                        as response commands and some minigames like rock paper scisors and guess the number. As I
+                        tested and
+                        learned new features I added more functionality such as the music player ability that uses the
+                        YT-DLP
+                        library. Apart from that it's
+                        still a simple bot with more plans in the future.</p>
+                </section>
+            </details>
+        </div>
+        <hr class="h-px my-8 border-0 bg-gray-800">
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Bike Rental Site</h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+
+                    <video class="w-96 h-96 pt-6 pb-6 object-cover" loop autoplay muted playsinline>
+                        <source src="images/bicycles.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can sign
+                        up, view
+                        bikes
+                        available for rent, rent out a bike, and post their own bike up for rent.
+                        To store bike and rental information I decided to utilize a MySQL database to store this data
+                        and PHP
+                        for the overall
+                        input and data processing. I plan to add more functionality in the future, such as integrating
+                        payment
+                        systems.</p>
+                </section>
+            </details>
+        </div>
+
+
+
 
         <hr class="h-px my-8 border-0 bg-gray-800">
-        <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
-            <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
-            <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
-            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/weather.png"
-                alt="pending">
-            <p class="text-lg text-center">Quick Weather Site was a site that I created as an additional source of
-                weather info when
-                needed. Often I would check the weather on my phone and then look outside and see a completely different
-                scene. As such I decided to make a PHP site that would allow me to quickly search any city and gets its
-                current weather from OpenWeatherSource. Additionally it would save that city as a cookie so I do not
-                have to re-enter the city name upon search. A short JavaScript script allows me to change the background
-                image
-                depending on local weather conditions.
-            </p>
-        </section>
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Quick Weather Site</h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+                    <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
+                    <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
+                        src="images/weather.png" alt="pending">
+                    <p class="text-lg text-center">Quick Weather Site was a site that I created as an additional source
+                        of
+                        weather info when
+                        needed. Often I would check the weather on my phone and then look outside and see a completely
+                        different
+                        scene. As such I decided to make a PHP site that would allow me to quickly search any city and
+                        gets its
+                        current weather from OpenWeatherSource. Additionally it would save that city as a cookie so I do
+                        not
+                        have to re-enter the city name upon search. A short JavaScript script allows me to change the
+                        background
+                        image
+                        depending on local weather conditions.</p>
+                </section>
+            </details>
+        </div>
+
         <hr class="h-px my-8 border-0 bg-gray-800">
-        <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
-            <h1 class="text-2xl font-bold underline italic">UberUI</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/uberui.png"
-                alt="pending">
-            <p class="text-lg text-center">UberUI was a Java project consisting of 10+ classes which allowed multiple
-                riders and drivers. Additionally, various algorithms are implemented alongside multiple data structures
-                such as linked-lists and queues to replicate Ubers system in a console format. The program has been
-                tested for
-                hundereds of various scenarios.
-            </p>
-        </section>
+
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">UberUI</h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+
+                    <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
+                        src="images/uberui.png" alt="pending">
+                    <p class="text-lg text-center">UberUI was a Java project consisting of 10+ classes which allowed
+                        multiple
+                        riders and drivers. Additionally, various algorithms are implemented alongside multiple data
+                        structures
+                        such as linked-lists and queues to replicate Ubers system in a console format. The program has
+                        been
+                        tested for
+                        hundereds of various scenarios.</p>
+                </section>
+            </details>
+        </div>
+
+        <hr class="h-px my-8 border-0 bg-gray-800">
 
         <!--
         <hr class="h-px my-8 border-0 bg-gray-800">
