--- a/projectspage.html
+++ b/projectspage.html
@@ -139,7 +139,7 @@
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
-        <p class="pt-6 text-lg font-comorant animate-fadein text-center">Below you can find some of the projects that I have completed over the past year. The source code for each can be found on my <a class="text-indigo-700 hover:text-cyan-500" href="https://github.com/gill345">GitHub</a>. 
+        <p class="pt-6 pl-6 pr-6 text-lg font-comorant animate-fadein text-center">Below you can find some of the projects that I have completed over the past year. The source code for each can be found on my <a class="text-indigo-700 hover:text-cyan-500" href="https://github.com/gill345">GitHub</a>. 
         I do have more projects in progress that I will update onto this page as soon as they are finished.</p>
         <hr class="h-px my-8 border-0 bg-gray-800">
 
@@ -155,7 +155,7 @@
                         </svg>
                     </span>
                 </summary>
-                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
 
                     <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
                         src="images/discord.png" alt="pending">
@@ -186,7 +186,7 @@
                         </svg>
                     </span>
                 </summary>
-                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
 
                     <video class="w-96 h-96 pt-6 pb-6 object-cover" loop autoplay muted playsinline>
                         <source src="images/bicycles.mp4" type="video/mp4">
@@ -222,7 +222,7 @@
                         </svg>
                     </span>
                 </summary>
-                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
                     <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
                     <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
                         src="images/weather.png" alt="pending">
@@ -257,7 +257,7 @@
                         </svg>
                     </span>
                 </summary>
-                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
 
                     <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
                         src="images/uberui.png" alt="pending">
@@ -277,7 +277,7 @@
 
         <!--
         <hr class="h-px my-8 border-0 bg-gray-800">
-        <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3">
+        <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pl-6 pr-6">
             <h1 class="pt-8 text-2xl font-bold italics underline">Work in Progress</h1>
             <img class="" src="" alt="pending">
             <p class="text-lg text-center">Work in Progress</p>
