--- a/skillspage.html
+++ b/skillspage.html
@@ -158,6 +158,11 @@
                     alt="c-plus-plus-logo" />
                 <p>C/C++</p>
             </div>
+            <div
+                class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
+                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/plasticine/100/c-sharp-logo.png" alt="c-sharp-logo"/>
+                <p>C#</p>
+            </div>
 
             <div
                 class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
@@ -237,11 +242,6 @@
                 <p>Json</p>
             </div>
 
-            <div
-                class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
-                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/color/60/lisp.png" alt="lisp" />
-                <p>Lisp</p>
-            </div>
         </div>
 
         <h1 class="pt-8 text-center text-3xl font-comorant font-bold">Software Tools/Platforms I Can Use</h1>
@@ -285,15 +285,13 @@
             </div>
             <div
                 class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
-                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/fluency/60/spyder-ide.png"
-                    alt="spyder-ide" />
-                <p>Spyder</p>
+                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/3d-fluency/60/github.png" alt="github"/>
+                <p>GitHub</p>
             </div>
             <div
                 class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
-                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/color/60/lamp-of-alladin.png"
-                    alt="lamp-of-alladin" />
-                <p>Geany</p>
+                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/color/60/git.png" alt="git"/>
+                <p>Git</p>
             </div>
             <div
                 class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
@@ -303,9 +301,8 @@
             </div>
             <div
                 class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
-                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/color/60/emacs.png"
-                    alt="emacs" />
-                <p>Emacs</p>
+                <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/fluency/60/bash.png" alt="bash"/>
+                <p>Bash</p>
             </div>
         </div>
 
