--- a/projectspage.html
+++ b/projectspage.html
@@ -178,6 +178,7 @@
             <details class="group">
                 <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
                     <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Bike Rental Site</h1>
+                    
                     <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
                         <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
@@ -187,7 +188,8 @@
                     </span>
                 </summary>
                 <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
-
+                    <a class="text-2xl text-sky-700 font-bold" href="http://ranbircycles.ct.ws/index.php">Link to Site</a>
+                    <p class="text-lg text-center">To test please use test@gmail.com for email and Test123! as the password. Or feel free to sign up!</p>
                     <video class="w-96 h-96 pt-6 pb-6 object-cover" loop autoplay muted playsinline>
                         <source src="images/bicycles.mp4" type="video/mp4">
                         Your browser does not support the video tag.
@@ -196,11 +198,11 @@
                         up, view
                         bikes
                         available for rent, rent out a bike, and post their own bike up for rent.
-                        To store bike and rental information I decided to utilize a MySQL database to store this data
-                        and PHP
+                        To store bike and rental information I decided to utilize a MySQL database to create 3 tables to store this data,
+                        and used PHP
                         for the overall
                         input and data processing. I plan to add more functionality in the future, such as integrating
-                        payment
+                        payment and email
                         systems.</p>
                 </section>
             </details>
