--- a/projectspage.html
+++ b/projectspage.html
@@ -202,7 +202,7 @@
                         and used PHP
                         for the overall
                         input and data processing. I plan to add more functionality in the future, such as integrating
-                        payment and email
+                        payment and email notification
                         systems.</p>
                 </section>
             </details>
