--- a/projectspage.html
+++ b/projectspage.html
@@ -139,8 +139,10 @@
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
-        <p class="pt-6 pl-6 pr-6 text-lg font-comorant animate-fadein text-center">Below you can find some of the projects that I have completed over the past year. The source code for each can be found on my <a class="text-indigo-700 hover:text-cyan-500" href="https://github.com/gill345">GitHub</a>. 
-        I do have more projects in progress that I will update onto this page as soon as they are finished.</p>
+        <p class="pt-6 pl-6 pr-6 text-lg font-comorant animate-fadein text-center">Below you can find some of the
+            projects that I have completed over the past year. The source code for each can be found on my <a
+                class="text-indigo-700 hover:text-cyan-500" href="https://github.com/gill345">GitHub</a>.
+            I do have more projects in progress that I will update onto this page as soon as they are finished.</p>
         <hr class="h-px my-8 border-0 bg-gray-800">
 
         <div class="py-5">
@@ -178,7 +180,7 @@
             <details class="group">
                 <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
                     <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Bike Rental Site</h1>
-                    
+
                     <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
                         <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
@@ -188,8 +190,10 @@
                     </span>
                 </summary>
                 <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
-                    <a class="text-2xl text-sky-700 font-bold" href="http://ranbircycles.ct.ws/index.php">Link to Site</a>
-                    <p class="text-lg text-center">To test please use test@gmail.com for email and Test123! as the password. Or feel free to sign up!</p>
+                    <a class="text-2xl text-sky-700 font-bold" href="http://ranbircycles.ct.ws/index.php">Link to
+                        Site</a>
+                    <p class="text-lg text-center">To test please use test@gmail.com for email and Test123! as the
+                        password. Or feel free to sign up!</p>
                     <video class="w-96 h-96 pt-6 pb-6 object-cover" loop autoplay muted playsinline>
                         <source src="images/bicycles.mp4" type="video/mp4">
                         Your browser does not support the video tag.
@@ -198,7 +202,8 @@
                         up, view
                         bikes
                         available for rent, rent out a bike, and post their own bike up for rent.
-                        To store bike and rental information I decided to utilize a MySQL database to create 3 tables to store this data,
+                        To store bike and rental information I decided to utilize a MySQL database to create 3 tables to
+                        store this data,
                         and used PHP
                         for the overall
                         input and data processing. I plan to add more functionality in the future, such as integrating
@@ -212,6 +217,40 @@
 
 
         <hr class="h-px my-8 border-0 bg-gray-800">
+
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Project Cypress</h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
+                    <a class="text-2xl text-sky-700 font-bold" href="https://cypress.great-site.net/login.php">Link to
+                        Site</a>
+                    <p class="text-lg text-center">To test as admin please use admin@gmail.com for email and admin123 as
+                        the password. Or feel free to sign up as a user!</p>
+                    <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
+                        src="images/cypress.png" alt="pending">
+
+                    <p class="text-lg text-center">Project Cypress was a group project that used the Leaflet JS map API
+                        to create
+                        a problem reporting tool for the City of Toronto. We decided to use PHP for the backend and a
+                        MySQL database to
+                        store user and admin accounts, reported problems, and problem subscriptions so that
+                        notifications can be mailed to the user
+                        via PHPMailer</p>
+                </section>
+            </details>
+        </div>
+
+        <hr class="h-px my-8 border-0 bg-gray-800">
+
         <div class="py-5">
             <details class="group">
                 <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
@@ -276,6 +315,8 @@
         </div>
 
         <hr class="h-px my-8 border-0 bg-gray-800">
+
+
 
         <!--
         <hr class="h-px my-8 border-0 bg-gray-800">
