--- a/aboutpage.html
+++ b/aboutpage.html
@@ -158,11 +158,19 @@
                 My fascination led me to pursue studies in Computer Science, and as a Computer Science student, I have
                 been able to develop
                 strong problem-solving skills and experience with languages such as Java, Python and C. Currently, I'm
-                learning both Client-Side and Server-Side programming in relation to Web Development. I've also began
+                learning both Machine Learning and Artificial Intelligence, and their potential to revolutionize various industries. I've also began
                 exploring Cloud Computing
                 and its applications, particularly using Microsoft Azure.
             </p>
 
+            <br>
+
+            <p>
+                I had the opportunity to intern at RBH Access Technologies, where I worked as a Software Developer
+                Intern. During my time there, I was able to apply my knowledge of C#, .NET and Angular to develop and maintain
+                site based security web applications. This experience allowed me to gain practical skills in software development, as well as
+                teamwork and communication. I was able to collaborate with other developers and stakeholders to ensure that the applications met the needs of the users.
+            </p>
 
             <br>
 
