--- a/projectspage.html
+++ b/projectspage.html
@@ -212,8 +212,57 @@
                 </section>
             </details>
         </div>
+<hr class="h-px my-8 border-0 bg-gray-800">
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Ontario Used Car Price Predictor
+                    </h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
 
+                    <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
+                        src="images/cars.png" alt="pending">
+                    <p class="text-lg text-center">Developed a machine learning web application that predicts used car
+                        prices based on key attributes such as make, model, year, mileage, drivetrain, and color. The
+                        model was trained on a dataset of 24,199 vehicles listed for sale in 2023 within 25 km of
+                        downtown Toronto, collected from Autotrader.ca. Achieved an R² score of 0.87, indicating strong
+                        predictive accuracy. The app was deployed using Streamlit, allowing users to input car details
+                        and instantly receive data-driven price estimates through an interactive interface.</p>
+                </section>
+            </details>
+        </div>
+<hr class="h-px my-8 border-0 bg-gray-800">
+        <div class="py-5">
+            <details class="group">
+                <summary class="flex flex-col items-center font-medium cursor-pointer list-none">
+                    <h1 class="text-2xl font-bold underline italic pb-6 font-comorant">Gill's PC Parts Marketplace</h1>
+                    <span class="transition animate-bounce group-open:animate-none group-open:rotate-180">
+                        <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24"
+                            width="24">
+                            <path d="M6 9l6 6 6-6"></path>
+                        </svg>
+                    </span>
+                </summary>
+                <section class="grid grid-cols-1 justify-items-center text-left font-comorant pl-6 pr-6 pt-8">
 
+                    <!-- <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6 rounded-lg"
+                        src="images/discord.png" alt="pending"> -->
+                    <p class="text-lg text-center">Gill's Pc Parts is a pc component marketplace where users can buy and
+                        sell used/new pc parts. I made this web app with an Angular Front-end and an ASP.Net API backend
+                        using C# and connected to a MSSQL server. <strong>This project is currently a work in
+                            progress.</strong></p>
+                </section>
+            </details>
+        </div>
 
 
         <hr class="h-px my-8 border-0 bg-gray-800">
