--- a/aboutpage.html
+++ b/aboutpage.html
@@ -14,6 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Doto:wght@100..900&family=Permanent+Marker&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+
     <script>
         tailwind.config = {
             theme: {
@@ -30,7 +32,7 @@
                         bitter: ['Bitter', 'serif'],
                         doto: ['Doto', 'serif'],
                         comorant: ['Cormorant Garamond', 'serif'],
-                        marker: ['Permanent Marker', 'serif'],
+                        marker: ['Silkscreen', 'sans-serif'],
                     },
                     colors: {
                         lgrey: '#d4d4d4',
@@ -93,7 +95,7 @@
                 class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
                 <div class="flex">
                     <span class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
-                        <h1 class="opacity-100">Ranbir Gill<h1>
+                       <a href="https://gill345.github.io."> <h1 class="opacity-100">Ranbir Gill</h1> </a>
                     </span>
                 </div>
 
